fix pdf creation

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"version": "0.1.0",
 	"license": "proprietary",
     "require": {
-        "noerd/noerd": "^0.2"
+        "noerd/noerd": "^0.2",
+        "barryvdh/laravel-dompdf": "^3.1"
     },
 	"autoload": {
 		"psr-4": {
