--- a/app-configs/study/lists/flashcards-list.yml
+++ b/app-configs/study/lists/flashcards-list.yml
@@ -13,14 +13,14 @@ columns:
     type: relation_link
     modalComponent: study-material-detail
     idField: study_material_id
-    idParam: studyMaterialId
+    idParam: modelId
   - field: summary
     label: study_label_summary
     width: 20
     type: relation_link
     modalComponent: summary-detail
     idField: summary_id
-    idParam: summaryId
+    idParam: modelId
   - field: created_date
     label: study_label_created_date
     width: 15
