--- a/app-configs/study/lists/summaries-list.yml
+++ b/app-configs/study/lists/summaries-list.yml
@@ -13,7 +13,7 @@ columns:
     type: relation_link
     modalComponent: study-material-detail
     idField: study_material_id
-    idParam: studyMaterialId
+    idParam: modelId
   - field: created_at
     label: study_label_created_at
     width: 20
